完成 vmess 节点的服务器搭建说明

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "vue-template-compiler": "^2.7.16",
     "vuepress": "^1.9.10"
+  },
+  "dependencies": {
+    "markdown-it-katex": "^2.0.3"
   }
 }
