--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.23",
-    "vuepress-theme-plume": "^1.0.0-rc.153",
+    "sass-embedded": "^1.0.0",
+    "typescript": "^5.8.3",
     "vue": "^3.4.0",
     "vuepress": "^2.0.0-rc.23",
-    "sass-embedded": "^1.0.0"
+    "vuepress-theme-plume": "^1.0.0-rc.153"
+  },
+  "dependencies": {
+    "@vueuse/integrations": "^13.5.0",
+    "focus-trap": "^7.6.5",
+    "mark.js": "^8.11.1",
+    "minisearch": "^7.1.2"
   }
 }
